# hypervector

./: Cargo.toml  README.md  READMEadult.md  READMEhar.md  READMEiris.md  READMEisolet.md  READMEkv.md  READMElanguage_id.md  READMEmexican.md  READMEml-100k.md  READMEmnist.md  READMEplate.md  READMEpromoter.md  READMEwine.md  isolet.py  plot.py  plot_kv.py  tsne.py  winequality.py
DATA/WINEQUALITY/: winequality_red_test.csv  winequality_red_train.csv
DATA/WINEQUALITY_WHITE/: winequality_test.csv  winequality_train.csv
RESULTS/: hdv_binary_objects.csv  hdv_binary_sentences.csv  hdv_bipolar_objects.csv  hdv_bipolar_sentences.csv  hdv_complex_objects.csv  hdv_complex_sentences.csv  hdv_modular_objects.csv  hdv_modular_sentences.csv  hdv_real_objects.csv  hdv_real_sentences.csv
examples/: adult.rs  braille.rs  har.rs  har_fwht.rs  iris.rs  isolet.rs  kv_store.rs  language_id.rs  mexican.rs  mnist.rs  movielens100k.rs  movielens32m.rs  plate.rs  promoter.rs  wine.rs
py/: isolet.py  plot.py  winequality.py
src/: binary_hdv.rs  bipolar_hdv.rs  complex_hdv.rs  data.rs  datasets.rs  encoding.rs  kmeans.rs  lib.rs  modular_hdv.rs  real_hdv.rs  tabular_encoder.rs  trainer.rs  types.rs
src/datasets/: har_dataset.rs  wine_dataset.rs
src/trainer/: isolet_dataset.rs  kmeans.rs  lvq.rs  mod.rs  multi_perceptron.rs  pa.rs  perceptron.rs  wine_dataset.rs
src/types/: binary.rs  bipolar.rs  complex.rs  modular.rs  real.rs  traits.rs
