[package]
name = "hypervector"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.4", features = ["derive"]}
glob = "0.3.2"
quaternion-rs = {git = "https://github.com/jesper-olsen/quaternion-rs" }
mersenne-twister-rs = {git = "https://github.com/jesper-olsen/mersenne-twister-rs"}
num-complex = "0.4.6"
rustfft = "6.4.0"
rand = { version = "0.10.0", features = ["chacha"] }
rand_core = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.11.0"

